# armv7-a

./: README.md
baremetal/led_blink_mmu/: Makefile  link.lds  mmu.c  start.S
baremetal/led_blink_mmu_cmake/: CMakeLists.txt  main.c  start.S  start.s
baremetal/led_blink_mmu_cmake/cmake/: cross-compile.cmake
baremetal/led_blink_mmu_cmake/cmake/arch/: cortex-a7_gnu.cmake
baremetal/led_blink_mmu_cmake/cmake/toolchain/: arm-none-eabi-gcc.cmake
